fix(modal styles): update button hover effects and remove dark mode styles for consistency

--- a/_croucher/modal/_standard_modal.scss
+++ b/_croucher/modal/_standard_modal.scss
@@ -734,6 +734,12 @@
       background-color: white;
       border: 1px solid black;
       color: black;
+
+      &:hover {
+        background-color: $croucher-red;
+        color: white;
+        border: 1px solid $croucher-red;
+      }
     }
 
     .submit,
@@ -742,36 +748,11 @@
       border: none;
       color: white;
       border: 1px solid black;
-      transition: background-color 0.2s, color 0.2s;
 
       &:hover {
         background-color: white !important;
         color: black !important;
         border: 1px solid black;
-      }
-
-      @media (prefers-color-scheme: dark) {
-        background-color: black !important;
-        color: white !important;
-        border: 1px solid black;
-
-        &:hover {
-          background-color: #eab308 !important;
-          color: black !important;
-          border: 1px solid #eab308;
-        }
-      }
-
-      .dark & {
-        background-color: black !important;
-        color: white !important;
-        border: 1px solid black;
-
-        &:hover {
-          background-color: #eab308 !important;
-          color: black !important;
-          border: 1px solid #eab308;
-        }
       }
     }
 
